--- a/web/client/index.html
+++ b/web/client/index.html
@@ -146,7 +146,7 @@ body {
 		</div>		
 		<div style="float:left;width:450px;height:80px"><div id="sliderObj" style="margin:100px 0 0 100px;"></div>
 		</div>
-		<div style="float:left;display:none;width:150px;height:80px;"><a role="button" onclick="resetStream();" class="robotButton">Reset</a></div>
+		<div style="float:left;display:none;width:150px;height:80px;"><a role="button" onclick="resetStream();" class="robotButton">Reset Robot</a></div>
 		<div style="float:left;display:block;margin:0 0px 0 80px;">
 			<div style="float:left;display:block;margin:60px 20px 0 0;">
 				<a role="button"  ontouchstart="pressRobot(2);" onmouseup="releaseRobot(2);" class="robotButton">&nbsp;Turn Left&nbsp;</a>
